--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
             <img src="img/instagram-celular.png" alt="Imagem de Iphone">
         </div>
         <div class="instagram-continue">
-            <div class="groupe">
-                <img src="img/instagram-logo.png" alt="Logo do instagram">
+            <div class="group">
+                <img src="img/instagram-logo.png" class="instagram-logo" alt="Logo do instagram">
                 <div class="profile-photo">
                     <img src="img/perfil-instagram.jpg" alt="Foto do perfil de marcosgerminio">
                 </div>
                 <a href="#" class="instagram-login">Continar como marcosgerminio</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
-            <div class="groupe">
+            <div class="group">
                 <p class="not-account"> Não é marcosgerminio?</p>
                 <p class="not-account">
-                    <span class="link-blue">Alternar contas</span>
+                    <span class="link-blue">Trocar de conta</span>
                     ou
                     <span class="link-blue">Inscreva-se</span>
                 </p>  
