--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
                 <div class="profile-photo">
                     <img src="img/perfil-instagram.jpg" alt="Foto do perfil de marcosgerminio">
                 </div>
-                <a href="#" class="instagram-login">Continar como marcosgerminio</a>
+                <a href="https://www.instagram.com/" class="instagram-login">Continar como marcosgerminio</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
                 <p class="not-account"> Não é marcosgerminio?</p>
                 <p class="not-account">
-                    <span class="link-blue">Trocar de conta</span>
+                    <a href="https://www.instagram.com/"><span class="link-blue">Trocar de conta</span></a>
                     ou
-                    <span class="link-blue">Inscreva-se</span>
+                    <a href="https://www.instagram.com/accounts/emailsignup/"><span class="link-blue">Cadastre-se</span></a>
                 </p>  
             </div>
             <div class="get-the-app">
-                <p class="get-app">Baixe o aplicativo</p>
+                <p class="get-app">Obtenha o aplicativo.</p>
                 <div class="download">
-                    <a href="#" class="app-download"></a>
-                    <a href="#" class="app-download"></a>
+                    <a href="https://apps.apple.com/br/app/instagram/id389801252" target="_blank" class="app-download"></a>
+                    <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=pt" target="_blank" class="app-download"></a>
                 </div>
             </div>
         </div>
